:bug: Refactor code structure for improved readability and maintainability

--- a/src/index.css
+++ b/src/index.css
@@ -31,4 +31,5 @@ input[type="number"] {
   --color-rh-secondarypurple: #551abc;
   --color-rh-primarygrey: #212120;
   --color-rh-secondarygrey: #848681;
+  --color-rh-secondary-red: #fb5767;
 }
